[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "webmon"
description = ""
version = "0.0.1"
requires-python = ">=3.9"
authors = [
        {name = "Anton Aŭtuška", email = "avtushko@gmail.com"},
]
readme = "README.md"

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "aiohttp",
    "asyncio",
    "logging",
    "asyncpg",
    "argparse"
]

executionEnvironments = [
  { root = "src" }
]

[project.scripts]
webmon = "webmon.main:main"

[project.optional-dependencies]
test = [
     "mypy",
     "pytest",
     "pytest-aiohttp",
     "pytest-asyncio"
]


[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = "tests"
